removing deprecated APIs in java 9